[package]
name = "treasury_governance"
version = "0.1.0"
authors = ["Oluwagbemiga"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false } 
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-alpha" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
